--- a/index.ipynb
+++ b/index.ipynb
@@ -143,7 +143,7 @@
    "outputs": [],
    "source": [
     "# here we want to find just the area of buenos_aires\n",
-    "buenos_aires_area = cities\n",
+    "buenos_aires_area = cities[0]['']\n",
     "# code goes here\n",
     "\n",
     "buenos_aires_area"
