Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -138,12 +138,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4758"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# here we want to find just the area of buenos_aires\n",
-    "buenos_aires_area = cities[0]['']\n",
+    "buenos_aires_area = cities[0]['Area']\n",
     "# code goes here\n",
     "\n",
     "buenos_aires_area"
@@ -164,7 +175,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "city_indices = None\n",
+    "city_indices = Non\n",
     "city_indices # [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11]"
    ]
   },
