--- a/index.ipynb
+++ b/index.ipynb
@@ -171,9 +171,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "city_indices = list(range(0,12))\n",
     "city_indices # [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11]"
@@ -192,7 +203,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "city_names = []\n",
+    "city_names = \n",
     "\n",
     "city_names"
    ]
