--- a/index.ipynb
+++ b/index.ipynb
@@ -203,7 +203,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "city_names = \n",
+    "city_names = []\n",
     "\n",
     "city_names"
    ]
