Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -203,8 +203,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "city_names = []\n",
-    "\n",
+    "city_names = [cit]\n",
     "city_names"
    ]
   },
