Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -203,7 +203,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "city_names = [cit]\n",
+    "city_names = [city['City'] ]\n",
     "city_names"
    ]
   },
