--- a/index.ipynb
+++ b/index.ipynb
@@ -199,11 +199,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Buenos Aires',\n",
+       " 'Toronto',\n",
+       " 'Pyeongchang',\n",
+       " 'Marakesh',\n",
+       " 'Albuquerque',\n",
+       " 'Los Cabos',\n",
+       " 'Greenville',\n",
+       " 'Archipelago Sea',\n",
+       " 'Walla Walla Valley',\n",
+       " 'Salina Island',\n",
+       " 'Solta',\n",
+       " 'Iguazu Falls']"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "city_names = [city['City'] ]\n",
+    "city_names = [city['City'] for city in cities]\n",
     "city_names"
    ]
   },
