--- a/index.ipynb
+++ b/index.ipynb
@@ -245,7 +245,8 @@
    "outputs": [],
    "source": [
     "names_and_ranks = []\n",
-    "\n",
+    "for i in city_indices:\n",
+    "    \n",
     "\n",
     "names_and_ranks\n",
     "# write a for loop that adds the properly formatted string to the names_and_ranks list"
