--- a/index.ipynb
+++ b/index.ipynb
@@ -246,7 +246,7 @@
    "source": [
     "names_and_ranks = []\n",
     "for i in city_indices:\n",
-    "    names_and_ranks\n",
+    "    names_and_ranks f\"{}\n",
     "\n",
     "names_and_ranks\n",
     "# write a for loop that adds the properly formatted string to the names_and_ranks list"
