--- a/index.ipynb
+++ b/index.ipynb
@@ -255,7 +255,7 @@
    "source": [
     "names_and_ranks = []\n",
     "for i in city_indices:\n",
-    "    names_and_ranks f\"{i+1}. {city_names[i]}\"\"\n",
+    "    names_and_ranks f\"{i+1}. {city_names[i]}\n",
     "\n",
     "names_and_ranks\n",
     "# write a for loop that adds the properly formatted string to the names_and_ranks list"
