Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -240,22 +240,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "ename": "SyntaxError",
-     "evalue": "EOL while scanning string literal (<ipython-input-8-c1c13e92ef90>, line 3)",
+     "evalue": "invalid syntax (<ipython-input-9-225f230f92ed>, line 3)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-8-c1c13e92ef90>\"\u001b[0;36m, line \u001b[0;32m3\u001b[0m\n\u001b[0;31m    names_and_ranks f\"{i+1}. {city_names[i]}\u001b[0m\n\u001b[0m                                            ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m EOL while scanning string literal\n"
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-9-225f230f92ed>\"\u001b[0;36m, line \u001b[0;32m3\u001b[0m\n\u001b[0;31m    names_and_ranks f'{i+1}. {city_names[i]}''\u001b[0m\n\u001b[0m                                            ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
    "source": [
     "names_and_ranks = []\n",
     "for i in city_indices:\n",
-    "    names_and_ranks f'{i+1}. {city_names[i]}''\n",
+    "    names_and_ranks f'{i+1}. {city_names[i]}')\n",
     "\n",
     "names_and_ranks\n",
     "# write a for loop that adds the properly formatted string to the names_and_ranks list"
