--- a/index.ipynb
+++ b/index.ipynb
@@ -385,6 +385,7 @@
    "outputs": [],
    "source": [
     "city_areas = []\n",
+    "for\n",
     "#write a for loop that adds the 'Area' of each city to the list city_areas"
    ]
   },
