Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -385,7 +385,8 @@
    "outputs": [],
    "source": [
     "city_areas = []\n",
-    "for city in citi\n",
+    "for city in cities:\n",
+    "    city\n",
     "#write a for loop that adds the 'Area' of each city to the list city_areas"
    ]
   },
