--- a/index.ipynb
+++ b/index.ipynb
@@ -386,7 +386,7 @@
    "source": [
     "city_areas = []\n",
     "for city in cities:\n",
-    "    city_areas.append\n",
+    "    city_areas.append([])\n",
     "#write a for loop that adds the 'Area' of each city to the list city_areas"
    ]
   },
