Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -380,13 +380,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "city_areas = []\n",
     "for city in cities:\n",
-    "    city_areas.append([])\n",
+    "    city_areas.append(city['Area'])\n",
     "#write a for loop that adds the 'Area' of each city to the list city_areas"
    ]
   },
