Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -380,13 +380,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[4758, 2731, 3194, 200, 491, 3750, 68, 8300, 33, 27, 59, 672]"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "city_areas = []\n",
     "for city in cities:\n",
     "    city_areas.append(city['Area'])\n",
+    "city_areas\n",
     "#write a for loop that adds the 'Area' of each city to the list city_areas"
    ]
   },
